[package]
name = "polymarket-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

